highscore service completed
